@@ -1,3 +1,7 @@
+Wed Aug 19 11:06:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Apply untested patch for wildcards.
+
 Mon Aug 17 23:44:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* AUTHORS: Update license of majority of code to MIT (but note that
